Core: remove old code  SOCK_MSG_FLOW

--- a/InspectionCore/Core0_1/Makefile_mods
+++ b/InspectionCore/Core0_1/Makefile_mods
@@ -84,7 +84,7 @@ IDIR=	include/ \
 
 
 
-# _OBJ = main.opp playground.opp MicroInsp_FType.opp Ext_Util_API.opp wiringPanel.opp
+# _OBJ = main.opp playground.opp MicroInsp_FType.opp wiringPanel.opp
 
 MLNN_OBJS=MLNNUtil.opp MLNL.opp MLNN.opp MLOpt.opp
 
