--- a/InspectionCore/common_lib/Makefile
+++ b/InspectionCore/common_lib/Makefile
@@ -12,7 +12,7 @@ IDIR=	./include/ \
 			$(MODULE_simple_uart)/include \
 
 ODIR=obj
-_OBJ = Util.o Util2.o SOCK_Msg_Flow.opp ImageSampler.opp Data_Layer_PHY.opp Data_Layer_Protocol.opp json_seg_parser.opp
+_OBJ = Util.o Util2.o ImageSampler.opp Data_Layer_PHY.opp Data_Layer_Protocol.opp json_seg_parser.opp
 
 target_a= $(addsuffix .a ,$(MODULE_NAME))
 ESS_TRACK=$(wildcard $(addsuffix /*.h* ,$(IDIR)))
