Core & SLID insp: DataLayer update

--- a/Peripheral/slideInsp_ESP32/platformio.ini
+++ b/Peripheral/slideInsp_ESP32/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-src_dir = ./
+src_dir = ./ 
 
 ; [env:esp32cam]
 ; platform = espressif32
@@ -31,11 +31,14 @@ upload_port = /dev/cu.SLAB_USBtoUART
 
 monitor_speed = 921600
 lib_deps = 
+  ArduinoJson
   WiFi
   https://github.com/bblanchon/ArduinoJson.git
   https://github.com/me-no-dev/AsyncTCP.git
   https://github.com/me-no-dev/ESPAsyncWebServer.git
 
   
+build_flags = -I Data_Layer
+
 board_build.embed_txtfiles = 
   resource/webapp/index.html
