--- a/InspectionCore/CameraLayer/Makefile
+++ b/InspectionCore/CameraLayer/Makefile
@@ -13,18 +13,21 @@ _OBJ = CameraLayer.opp CameraLayer_BMP.opp CameraLayer_BMP_carousel.opp
 
 FLAGS= -std=c++11 
 ifeq ($(FEATURE_COMPILE_W_ARAVIS),1)
+	FLAGS+= -D FEATURE_COMPILE_W_ARAVIS
 	FLAGS+=  `pkg-config --cflags glib-2.0`
 	IDIR+=$(MODULE_aravis)/include $(MODULE_aravis)/src 
 	_OBJ+= CameraLayer_Aravis.opp
 endif
 
 ifeq ($(FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK),1)
+	FLAGS+= -D FEATURE_COMPILE_W_HIKROBOT_CAMERA_SDK
 	IDIR+=$(MODULE_hikrobot_camera_sdk)/includes
 	_OBJ+=CameraLayer_HikRobot_Camera.opp
 endif
 
 
 ifeq ($(FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK),1)
+	FLAGS+= -D FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK
 	IDIR+=$(MODULE_MindVision_GIGE)/include
 	_OBJ+=CameraLayer_GIGE_MindVision.opp
 endif
