--- a/InspectionCore/CoreHub/Makefile_mods
+++ b/InspectionCore/CoreHub/Makefile_mods
@@ -27,7 +27,7 @@ export MODULE_SOIL=$(abspath $(moduleRoot)/contrib/SOIL)
 export MODULE_polyfit=$(abspath $(moduleRoot)/contrib/polyfit)
 export MODULE_lodepng=$(abspath $(moduleRoot)/contrib/lodepng)
 export MODULE_CameraLayer=$(abspath $(moduleRoot)/CameraLayer)
-export MODULE_SerialCom=$(abspath $(moduleRoot)/contrib/serialCom)
+export MODULE_simple_uart=$(abspath $(moduleRoot)/contrib/simple_uart)
 
 
 export MODULE_MJPEG_Streamer=$(abspath $(moduleRoot)/MJPEG_Streamer)
@@ -77,14 +77,14 @@ IDIR=	include/ \
 			$(MODULE_lodepng)\
 			$(MODULE_smem_channel)\
 			$(MODULE_shape_based_matching)/include \
-      $(MODULE_SerialCom)/include \
+      $(MODULE_simple_uart)/include \
       # /usr/local/include/opencv4
 			# $(MODULE_DataChannel)/include\
 			# $(MODULE_MLNN)/include/  \
 
 
 
-# _OBJ = main.opp playground.opp MicroInsp_FType.opp Ext_Util_API.opp wiringPanel.opp
+# _OBJ = main.opp playground.opp MicroInsp_FType.opp wiringPanel.opp
 
 MLNN_OBJS=MLNNUtil.opp MLNL.opp MLNN.opp MLOpt.opp
 
@@ -101,7 +101,7 @@ EXT_OBJS= $(MODULE_circleFitting)/CircleFitting.a \
 					$(MODULE_smem_channel)/smem_channel.a\
 					$(MODULE_BPG_Protocol)/BPG_Protocol.a \
 					$(MODULE_shape_based_matching)/libshape_based_matching.a \
-          # $(MODULE_SerialCom)/serialCom.a \
+          $(MODULE_simple_uart)/simple_uart.a \
 					# $(MODULE_DataChannel)/DataChannel.a \
 					# $(addprefix $(MODULE_MLNN)/obj/,$(MLNN_OBJS)) \
           # $(MODULE_MatchingEngine)/MatchingEngine.a \
@@ -150,8 +150,8 @@ else
 									$(MODULE_MJPEG_Streamer) \
 									$(MODULE_zlib) \
 									$(MODULE_smem_channel)\
-									$(MODULE_BPG_Protocol)\
-                  # $(MODULE_SerialCom) \
+									$(MODULE_BPG_Protocol) \
+                  $(MODULE_simple_uart) \
 									# $(MODULE_shape_based_matching)\
 									# $(MODULE_DataChannel) \
 									# $(MODULE_SOIL) \
