Core: simple_uart fix windows related bug

--- a/InspectionCore/contrib/simple_uart/Makefile
+++ b/InspectionCore/contrib/simple_uart/Makefile
@@ -5,5 +5,5 @@ target_a = simple_uart.a
 
 MakeTemplate?= $(abspath ../../Makefile.in)
 include $(MakeTemplate)
-SUB_MAKEFILES=test
-include $(MakeTemplate)
+# SUB_MAKEFILES=test
+# include $(MakeTemplate)
