--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ InspectionCore/CoreHub/visSele
 InspectionCore/Core0_1/B3_1.hydef
 InspectionCore/Core0_1/visSele_bk
 InspectionCore/contrib/simple_uart/test/simple_uart_test
+UI/WebUI2/build/
