--- a/InspectionCore/CoreHub/CMakeLists.txt
+++ b/InspectionCore/CoreHub/CMakeLists.txt
@@ -105,7 +105,7 @@ if($ENV{FEATURE_COMPILE_W_MINDVISION_CAMERA_SDK} EQUAL 1)
   
 endif()
 
-add_executable (visSele main.cpp wiringPanel.cpp wiringPanel_ext.cpp)
+add_executable (visSele main.cpp wiringPanel.cpp wiringPanel_ext.cpp InspectionTarget.cpp)
 
 add_dependencies(visSele mod_target MatchingEngine shape_based_matching)
 
