--- a/UI/WebUI2/package.json
+++ b/UI/WebUI2/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-redux": "^7.1.23",
     "antd": "^4.19.1",
+    "clone": "^2.1.2",
     "jsum": "^2.0.0-alpha.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
