--- a/Peripheral/MStepper/platformio.ini
+++ b/Peripheral/MStepper/platformio.ini
@@ -16,7 +16,7 @@ platform = espressif32
 board = esp32dev
 board_build.f_cpu = 80000000L
 framework = arduino
-upload_speed = 921600
+upload_speed = 1000000
 ; src_filter    = ${common.default_src_filter} +<src/HAL/ESP32>
 build_flags   = -DCORE_DEBUG_LEVEL=0 -I Data_Layer -I DirectSPI -I MStepper 
 ; upload_port = /dev/cu.SLAB_USBtoUART
@@ -25,10 +25,10 @@ build_flags   = -DCORE_DEBUG_LEVEL=0 -I Data_Layer -I DirectSPI -I MStepper
 
 monitor_speed = 921600
 lib_deps = 
-  WiFi
+  ; WiFi
   https://github.com/bblanchon/ArduinoJson.git
-  https://github.com/me-no-dev/AsyncTCP.git
-  https://github.com/me-no-dev/ESPAsyncWebServer.git
+  ; https://github.com/me-no-dev/AsyncTCP.git
+  ; https://github.com/me-no-dev/ESPAsyncWebServer.git
 
   
 board_build.embed_txtfiles = 
