DirectSPI: update to resolve conflict from ESP32 SPI hal

--- a/Peripheral/misc/ESP32_DirectSPI/platformio.ini
+++ b/Peripheral/misc/ESP32_DirectSPI/platformio.ini
@@ -14,9 +14,9 @@ src_dir = ./
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
-board_build.f_cpu = 80000000L
+board_build.f_cpu = 240000000L
 framework = arduino
-upload_speed = 921600
+upload_speed = 1000000
 build_flags = -DCORE_DEBUG_LEVEL=0
 monitor_speed = 921600
 lib_deps =
