--- a/Peripheral/MStepper/platformio.ini
+++ b/Peripheral/MStepper/platformio.ini
@@ -12,18 +12,20 @@
 src_dir = ./
 
 [env:esp32dev]
-platform = espressif32
+platform = espressif32@5.1.0
 board = esp32dev
 board_build.f_cpu = 240000000L
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
 framework = arduino
 upload_speed = 1000000
 ; src_filter    = ${common.default_src_filter} +<src/HAL/ESP32>
-build_flags   = -DCORE_DEBUG_LEVEL=0 -I Data_Layer -I DirectSPI -I MStepper  -I GCodeParser 
+build_flags   = -DCORE_DEBUG_LEVEL=0 -O3 -I Data_Layer -I DirectSPI -I MStepper  -I GCodeParser 
 ; upload_port = /dev/cu.SLAB_USBtoUART
 ; monitor_port = /dev/cu.SLAB_USBtoUART
 
 
-monitor_speed = 460800
+monitor_speed = 1000000
 lib_deps = 
   ; WiFi
   https://github.com/bblanchon/ArduinoJson.git
