--- a/Peripheral/ManualTapeReelInsp/platformio.ini
+++ b/Peripheral/ManualTapeReelInsp/platformio.ini
@@ -23,7 +23,7 @@ platform = espressif32
 board = esp32dev
 board_build.f_cpu = 240000000L
 framework = arduino
-upload_speed = 921600
+upload_speed = 1000000
 
 ; upload_port = /dev/cu.SLAB_USBtoUART
 ; monitor_port = /dev/cu.SLAB_USBtoUART
@@ -35,4 +35,4 @@ lib_deps =
   ESP32Encoder
 
   
-build_flags = -I Data_Layer
+build_flags = -I Data_Layer -I EncoderCounter
