SLID: add Input pin mode config

--- a/Peripheral/slideInsp_ESP32/platformio.ini
+++ b/Peripheral/slideInsp_ESP32/platformio.ini
@@ -26,10 +26,10 @@ framework = arduino
 upload_speed = 921600
 
 upload_port = /dev/cu.SLAB_USBtoUART
-; monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_port = /dev/cu.SLAB_USBtoUART
 
 
-monitor_speed = 921600
+monitor_speed = 230400
 lib_deps = 
   ArduinoJson
   WiFi
