Ignore .DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ InspectionCore/Core0_1/B3_1.hydef
 InspectionCore/Core0_1/visSele_bk
 InspectionCore/contrib/simple_uart/test/simple_uart_test
 UI/WebUI2/build/
+.DS_Store
