--- a/InspectionCore/contrib/smem_channel/Makefile
+++ b/InspectionCore/contrib/smem_channel/Makefile
@@ -3,7 +3,7 @@ IDIR=.
 ODIR=obj
 _OBJ = smem_channel.opp 
 
-ifeq ($(OS)$(CC),Windows_NTcc)
+ifeq ($(findstring MINGW64, $(OS)),MINGW64)
 	_OBJ+= sp_win.opp 
 else
 	_OBJ+= sp_posix.opp 
