Core: Fix Core0_1 build

--- a/InspectionCore/contrib/smem_channel/Makefile
+++ b/InspectionCore/contrib/smem_channel/Makefile
@@ -2,8 +2,10 @@
 IDIR=.
 ODIR=obj
 _OBJ = smem_channel.opp 
-
+$(info -------------$(OS)-------------)
 ifeq ($(findstring MINGW64, $(OS)),MINGW64)
+	_OBJ+= sp_win.opp 
+else ifeq ($(OS)$(CC),Windows_NTcc)
 	_OBJ+= sp_win.opp 
 else
 	_OBJ+= sp_posix.opp 
