MStepper: refactor MStepper stepper logic and resolving ghost step issue

--- a/Peripheral/MStepper/platformio.ini
+++ b/Peripheral/MStepper/platformio.ini
@@ -18,14 +18,14 @@ board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.flash_mode = qio
 framework = arduino
-upload_speed = 1000000
+upload_speed = 921600 
 ; src_filter    = ${common.default_src_filter} +<src/HAL/ESP32>
 build_flags   = -DCORE_DEBUG_LEVEL=0 -O3 -I Data_Layer -I DirectSPI -I MStepper  -I GCodeParser 
 ; upload_port = /dev/cu.SLAB_USBtoUART
 ; monitor_port = /dev/cu.SLAB_USBtoUART
 
 
-monitor_speed = 1000000
+monitor_speed = 921600
 lib_deps = 
   ; WiFi
   https://github.com/bblanchon/ArduinoJson.git
