--- a/UI/WebUI2/package.json
+++ b/UI/WebUI2/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-redux": "^7.1.23",
+    "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.21.4",
     "clone": "^2.1.2",
     "jsum": "^2.0.0-alpha.4",
