--- a/InspectionCore/CoreHub/CMakeLists.txt
+++ b/InspectionCore/CoreHub/CMakeLists.txt
@@ -131,6 +131,7 @@ endif()
 add_executable (visSele main.cpp wiringPanel.cpp wiringPanel_ext.cpp 
 InspectionTarget/InspectionTarget.cpp 
 InspectionTarget/InspTar_Orientation_ColorRegionOval.cpp 
+InspectionTarget/InspTar_SpriteDraw.cpp 
 InspectionTarget/InspTar_Orientation_ShapeBasedMatching.cpp
 InspectionTarget/InspTar_SurfaceCheckSimple.cpp
 InspectionTarget/InspTar_WBar_SizeComp.cpp)
