Core: remove Python for now

--- a/InspectionCore/CoreHub/CMakeLists.txt
+++ b/InspectionCore/CoreHub/CMakeLists.txt
@@ -43,20 +43,20 @@ find_package(PkgConfig REQUIRED)
 
 
 
-# set(PYTHON_EXECUTABLE "/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.8/")
-find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
-# pkg_search_module(LLL REQUIRED python3-embed)
+# # set(PYTHON_EXECUTABLE "/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.8/")
+# find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
+# # pkg_search_module(LLL REQUIRED python3-embed)
 
-message(STATUS "Python3_LIBRARIES: ${Python3_LIBRARIES}")
-message(STATUS "Python3_INCLUDE_DIRS: ${Python3_INCLUDE_DIRS}")
+# message(STATUS "Python3_LIBRARIES: ${Python3_LIBRARIES}")
+# message(STATUS "Python3_INCLUDE_DIRS: ${Python3_INCLUDE_DIRS}")
 
 
-# using find package to load pybind11
-find_package(pybind11 REQUIRED)
-message(STATUS "pybind11_INCLUDE_DIRS: ${pybind11_INCLUDE_DIRS}")
-message(STATUS "pybind11_LIBRARIES: ${pybind11_LIBRARIES}")
-message(STATUS "pybind11_DEFINITIONS: ${pybind11_DEFINITIONS}")
-message(STATUS "pybind11_FOUND: ${pybind11_FOUND}")
+# # using find package to load pybind11
+# find_package(pybind11 REQUIRED)
+# message(STATUS "pybind11_INCLUDE_DIRS: ${pybind11_INCLUDE_DIRS}")
+# message(STATUS "pybind11_LIBRARIES: ${pybind11_LIBRARIES}")
+# message(STATUS "pybind11_DEFINITIONS: ${pybind11_DEFINITIONS}")
+# message(STATUS "pybind11_FOUND: ${pybind11_FOUND}")
 
 
 # message(STATUS "=== PYTHON LIBRARIES: ${LLL_LIBRARIES}")
@@ -184,8 +184,7 @@ target_link_libraries(visSele
   $ENV{MODULE_shape_based_matching}/libshape_based_matching.a
   ${OS_DEP_LIB}
   ${OpenCV_LIBS}
-  ${Python3_LIBRARIES}
-  C:/msys64/mingw64/lib/libpython3.10.dll.a
+  # ${Python3_LIBRARIES}
   ${PLAT_LIBS}
   ${LINK_LIBS_CAMERA}
   )
@@ -220,7 +219,7 @@ include_directories (
   $ENV{MODULE_lodepng}
   ${OS_SP_inc}
   ${OpenCV_INCLUDE_DIRS}
-  ${Python3_INCLUDE_DIRS}
-  ${pybind11_INCLUDE_DIRS}
+  # ${Python3_INCLUDE_DIRS}
+  # ${pybind11_INCLUDE_DIRS}
   )
   
