--- a/UI/WebUI2/package.json
+++ b/UI/WebUI2/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-redux": "^7.1.23",
+    "@types/three": "^0.152.1",
     "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.21.4",
     "clone": "^2.1.2",
@@ -23,6 +24,7 @@
     "react-scripts": "^5.0.1",
     "reactflow": "^11.4.0",
     "redux-catch": "^1.3.1",
+    "three": "^0.153.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
     "xstate": "^4.30.6"
