MStepper: add  G01.ENC_ES  (KEEP_RUN_UNTIL_ENC_EARLY_STOP) cmd

--- a/Peripheral/MStepper/platformio.ini
+++ b/Peripheral/MStepper/platformio.ini
@@ -24,6 +24,8 @@ build_flags   = -DCORE_DEBUG_LEVEL=0 -O3 -I Data_Layer -I DirectSPI -I MStepper 
 ; upload_port = /dev/cu.SLAB_USBtoUART
 ; monitor_port = /dev/cu.SLAB_USBtoUART
 
+build_type = debug
+
 
 monitor_speed = 921600
 lib_deps = 
