--- a/Peripheral/MStepperV2/platformio.ini
+++ b/Peripheral/MStepperV2/platformio.ini
@@ -20,7 +20,7 @@ board_build.flash_mode = qio
 framework = arduino
 upload_speed = 921600 
 ; src_filter    = ${common.default_src_filter} +<src/HAL/ESP32>
-build_flags   = -DCORE_DEBUG_LEVEL=0 -O3 -I Data_Layer -I DirectSPI -I MStepper  -I GCodeParser 
+build_flags   = -DCORE_DEBUG_LEVEL=0 -O3 -I Data_Layer -I DirectSPI -I MStepperV2  -I GCodeParser 
 ; upload_port = /dev/cu.SLAB_USBtoUART
 ; monitor_port = /dev/cu.SLAB_USBtoUART
 
