--- a/InspectionCore/CoreHub/Makefile_mods
+++ b/InspectionCore/CoreHub/Makefile_mods
@@ -29,7 +29,7 @@ export MODULE_cJSON=$(abspath $(moduleRoot)/contrib/cJSON)
 export MODULE_mjpegLib=$(abspath $(moduleRoot)/contrib/mjpegLib)
 export MODULE_logctrl=$(abspath $(moduleRoot)/logctrl)
 export MODULE_common_lib=$(abspath $(moduleRoot)/common_lib)
-export MODULE_zlib=$(abspath $(moduleRoot)/contrib/zlib-1.2.11)
+# export MODULE_zlib=$(abspath $(moduleRoot)/contrib/zlib-1.2.11)
 export MODULE_SOIL=$(abspath $(moduleRoot)/contrib/SOIL)
 export MODULE_polyfit=$(abspath $(moduleRoot)/contrib/polyfit)
 export MODULE_lodepng=$(abspath $(moduleRoot)/contrib/lodepng)
