CoreHub: add exprtk lib to execute simple script

--- a/InspectionCore/CoreHub/Makefile_mods
+++ b/InspectionCore/CoreHub/Makefile_mods
@@ -35,6 +35,9 @@ export MODULE_polyfit=$(abspath $(moduleRoot)/contrib/polyfit)
 export MODULE_lodepng=$(abspath $(moduleRoot)/contrib/lodepng)
 export MODULE_CameraLayer=$(abspath $(moduleRoot)/CameraLayer)
 export MODULE_simple_uart=$(abspath $(moduleRoot)/contrib/simple_uart)
+export MODULE_exprtk=$(abspath $(moduleRoot)/contrib/exprtk)
+
+
 
 
 export MODULE_MJPEG_Streamer=$(abspath $(moduleRoot)/MJPEG_Streamer)
