--- a/UI/WebUI2/package.json
+++ b/UI/WebUI2/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reactflow/node-resizer": "^2.2.6",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -22,7 +23,7 @@
     "react-grid-layout": "^1.3.4",
     "react-redux": "^7.2.6",
     "react-scripts": "^5.0.1",
-    "reactflow": "^11.4.0",
+    "reactflow": "^11.10.1",
     "redux-catch": "^1.3.1",
     "three": "^0.153.0",
     "typescript": "^4.9.4",
